--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 --></div>
 
     <!-- products -->
-    <section class="products">
+    <section class="products" id="services">
       <div class="section-title">
         <hr>
           <h2>our products</h2>
@@ -225,7 +225,7 @@
             </button>
           </div>
             <div class="module">
-          <h3 >Dell</h3>
+          <h class="module"3 >Dell</h3>
           <h4>&#8358;42.99</h4>
             </div>
         </article>
@@ -241,7 +241,7 @@
             </button>
           </div>
             <div class="module">
-          <h3>Dell</h3>
+          <h3 class="module">Dell</h3>
           <h4>&#8358;22.99</h4>
                 </div>
         </article>
