--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
       <center><div class="testypic"><img src="img/6807466_preview.png" width="120px" height="120px" alt=""> <br>
           
           </div></center>
-          <p style="color: black; text-align: center;"><i class="fas fa-quote-left" style="position: absolute; left:30%; top: 145px; color: gray"></i><br>  
+          <p style="padding:20px; color: black; text-align: center;"><i class="fas fa-quote-left" style="position: absolute; left:30%; top: 145px; color: gray"></i><br>  
           Item arrived as described, on time and with plenty of packaging for a safe transit. Very happy with the New gaming laptop. Great experience overall with Reejuvi. <br> <i class="fas fa-quote-right" style="position: absolute; right: 30%; color: gray"></i>
           </p>
       </div>
