--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/backTop.css">
     <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
     
     <script src="js/products.json"></script>
    
