--- a/index.html
+++ b/index.html
@@ -412,6 +412,7 @@
 	    
 	     <!-- Start Instagram Feed  -->
     <div class="instagram-box">
+	    <h2 class="text-center">Gallery</h2>
         <div class="main-instagram owl-carousel owl-theme">
             <div class="item">
                 <div class="ins-inner-box">
