--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram - img-02.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/reejuvi"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -437,7 +437,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram - img-03.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/reejuvi"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -445,7 +445,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram - img-04.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/reejuvi"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -453,7 +453,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram - img-05.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/reejuvi"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -461,7 +461,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram - img-06.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/reejuvi"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -469,7 +469,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram - img-07.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/reejuvi"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -477,7 +477,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram - img-08.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/reejuvi"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -485,7 +485,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram - img-09.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/reejuvi"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -493,7 +493,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram - img-10.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/reejuvi"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
