--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <a class="nav-link" href="#testimony">Testimonials</a>
             </li> 
 	     <li class="nav-item">
-              <a class="nav-link" href="#testimony">Testimonials</a>
+              <a class="nav-link" href="#gallery">Gallery</a>
             </li> 
               <li class="nav-item">
               <a class="nav-link" href="#services">Services</a>
