--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
 	    
 	     <!-- Start Instagram Feed  -->
     <div class="instagram-box">
-	    <h2 class="text-center" style="color:white; padding-top:-80px;" id="gallery">Gallery</h2>
+	    <h2 class="text-center" style="color:white; margin-top:-30px;" id="gallery">Gallery</h2>
         <div class="main-instagram owl-carousel owl-theme">
             <div class="item">
                 <div class="ins-inner-box">
