--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             </button>
           </div>
             <div class="module">
-          <h class="module"3 >Dell</h3>
+          <h3 class="module">Dell</h3>
           <h4>&#8358;42.99</h4>
             </div>
         </article>
