--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
 	     <!-- Start Instagram Feed  -->
 	     
     <div class="instagram-box">
-	   <h2 class="text-center" style="color:blue;z-index:999" id="gallery">Gallery</h2>
+	   <h2 class="text-center" style="color:white;z-index:999" id="gallery">Gallery</h2>
         <div class="main-instagram owl-carousel owl-theme">
             <div class="item">
                 <div class="ins-inner-box">
