--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
 	     <!-- Start Instagram Feed  -->
 	     
     <div class="instagram-box">
-	   <h2 class="text-center" style="color:white;z-index:999" id="gallery">Gallery</h2>
+	   <h2 class="text-center" style="color:white;z-index:999; padding-bottom:25px;" id="gallery">Gallery</h2>
         <div class="main-instagram owl-carousel owl-theme">
             <div class="item">
                 <div class="ins-inner-box">
@@ -588,7 +588,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <p style="font-size=4px; padding-top: 5px">Copyright ©2020 | Designed by Obot Akpan. All rights reserved.</p>
+            <p style="font-size=4px; padding-top: 5px">Copyright ©2020. Reejuvi | Designed by Obot Akpan. All rights reserved.</p>
           </div>
         </div>
       </div>
